# ray-mmd

./: .gitattributes  .gitignore  .gitmodules  ColorBalance.pmx  LICENSE.txt  PointLight.pmx  README.md  README.txt  README_chs.md  SphereLight.pmx  SpotLight.pmx  ray.conf  ray.fx  ray.x  ray_advanced.conf  ray_controller.pmx
EnvLighting/: envlighting.fx  envlighting.fxsub  envlighting2.fx  envlighting_hdr.fx  pointLighting.fx  pointLighting.fxsub  point_lighting.fx  point_lighting.fxsub  rectangle_light.fx  rectangle_light.fxsub  sphere_lighting.fx  sphere_lighting.fxsub  spotLighting.fx  spot_lighting.fx  spot_lighting.fxsub
Extension/: .gitignore  BokehBlur.fx  BokehController.pmx  DebugController.fx  DebugController.pmx  GroundFogController.pmx  SSRController.pmx
Extension/AtmosphericScattering/: skybox_hdr.fx  skyground.fx
Extension/BilateralBlur/: Depth.fxsub  README.txt  bilateral_blur.fx
Extension/BokehBlur/: BokehBlur.fx  BokehController.pmx
Extension/BokehBlur (Useless)/: BokehController.pmx
Extension/ColorGrading/: ColorGrading.fx  ColorGradingController.pmx  ColorGradingControllerMinus.pmx  ColorGradingControllerPlus.pmx
Extension/Debug/: DebugController.fx  DebugController.pmx
Extension/DummyScreen/: DummyScreen.fx  DummyScreen.x
Extension/FXAA/: FXAA.fx
Extension/FilmGrain/: FilmGrain.fx  FilmGrainController.pmx  noise.dds
Extension/LightBloom/: LightBloom.fx  LightBloomController.pmx
Extension/OpticalFlares/: LICENSE.txt  OpticalFlares.fx  OpticalFlares.fxsub
Extension/OutdoorFloor/: OutdoorFloor.fx  OutdoorFloor.fxsub  OutdoorObject.fx  OutdoorObject.fxsub
Extension/SMAA/: SMAA.fx
Extension/StereoImage/: Depth.fx  Depth.fxsub  Horizontal.fx  RedCyan.fx  RedGreen.fx  Vertical.fx  YellowBlue.fx  stereoscopic.fxsub
Fog/: AtmosphericFog.emd  AtmosphericFog.pmx  GlobalFog.pmx  GroundFog.pmx  SphereFog.pmx  VolumetricCube.pmx  VolumetricFog.pmx  VolumetricPoint.pmx  VolumetricSphere.pmx  VolumetricSpot.pmx
Fog/AtmosphericFog/: AtmosphericFog.fxsub  atmospheric_fog  with godray.fx  atmospheric_fog with godray high.fx  atmospheric_fog with godray low.fx  atmospheric_fog with godray medium.fx  atmospheric_fog with godray.fx  atmospheric_fog.fx  atmospheric_fog.fxsub  atmospheric_fog_without sky with godray high.fx  atmospheric_fog_without sky with godray low.fx  atmospheric_fog_without sky with godray medium.fx  atmospheric_fog_without sky with godray.fx  atmospheric_fog_without sky.fx
Fog/GlobalFog/: global_fog.fx  global_fog.fxsub
Fog/GroundFog/: GroundFog.fx  ground_fog.fx  ground_fog.fxsub
Fog/SphereFog/: SphereFog.fx  SphereFog.fxsub  sphere_fog.fx  sphere_fog.fxsub  sphere_fog_s0.fx  sphere_fog_s1.fx  sphere_fog_s2.fx  sphere_fog_s3.fx  sphere_shadow.fx  sphere_shadow.fxsub
Fog/VolumetricCube/: volumetric_cube.fx  volumetric_cube.fxsub
Fog/VolumetricFog/: volumetric_fog.fx  volumetric_fog.fxsub
Fog/VolumetricPoint/: volumetric_point.fx  volumetric_point_with_shadow.fx
Fog/VolumetricSphere/: volumetric_sphere.fx  volumetric_sphere.fxsub
GI/: LightMass.rar
Lighting/: .gitignore  AmbientLight.pmx  DirectionalLight.emd  DirectionalLight.pmx  DiskLight.pmx  DummyScreen.fx  IESLight.pmx  LED.pmx  LED.x  LED16x10.x  LED16x9.x  LED4x3.x  PointLight.pmx  PointLightIES.pmx  README.txt  RectangleLight.pmx  RectangleLight2.pmx  SphereLight.pmx  SpotLight.pmx  SpotLightIES.pmx  TubeLight.pmx
Main/: main.fx  main.fxsub  main_emissive.fx  main_ex.fx  main_ex_alpha.fx  main_ex_mask.fx  main_ex_noalpha.fx  main_ex_with_sphmap.fx  main_ex_with_sphmap_albedo.fx
Materials/: README.md  README_chs.md  material.fx  material_2.0.fx  material_cloth.fx  material_common.fxsub  material_common_2.0.fxsub  material_eye_cornea.fx  material_eye_iris.fx  material_eye_sclera.fx  material_glass.fx  material_hair.fx  material_hair_melanin.fx  material_helper.fx  material_helper_2.0.fx  material_helper_2.0_chs.fx  material_led.fx  material_lighting.fx  material_marble.fx  material_metal_rough.fx  material_metal_smooth.fx  material_metal_smoth.fx  material_n.fx  material_nsm.fx  material_skin.fx  material_skin_004.fx  material_skin_melanoderm.fx  material_skybox.fx  material_template.fx
Shader/: ACES.fxsub  AerialPerspective.fxsub  BRDF.fxsub  CameraMotion.fxsub  ChapmanFunctions.fxsub  Color.fxsub  ColorGrading.fxsub  ColorSpaceACES.fxsub  ContactShadow.fxsub  DeclareGbufferTexture.fxsub  EdgeLine.fxsub  EdgeLineAA.fxsub  EyeAdaptation.fxsub  FXAA3.fxsub  Gradient Based Fog.fxsub  Image Based Fog.fxsub  Image Based Lighting - Fast.fxsub  Image Based Lighting.fxsub  Image Based Sky.fxsub  LTC.fxsub  LTCHelper.fxsub  MonteCarlo.fxsub  Outline.fxsub  PSSM.fxsub  Packing.fxsub  PhaseFunctions.fxsub  Poisson.fxsub  PostProcessBloom.fxsub  PostProcessBokeh.fxsub  PostProcessBokehDOF.fxsub  PostProcessBokehDiaphragm.fxsub  PostProcessCircleDOF.fxsub  PostProcessColorGrading.fxsub  PostProcessDiffusion.fxsub  PostProcessEyeAdaptation.fxsub  PostProcessFog.fxsub  PostProcessGaussianDOF.fxsub  PostProcessGhost.fxsub  PostProcessHDR.fxsub  PostProcessHexDOF.fxsub  (+76 more)
Shadow/: Depth.fx  Depth.fxsub  Depth_noalpha.fx  Depth_none.fx  Depth_nossao.fx  EVSM.fxsub  PSSM.fx  PSSM.fxsub  PSSM1.fx  PSSM2.fx  PSSM3.fx  PSSM4.fx  PSSM_noalpha.fx  SSAO visibility 0.0.fx  SSAO visibility 0.1.fx  SSAO visibility 0.2.fx  SSAO visibility 0.3.fx  SSAO visibility 0.4.fx  SSAO visibility 0.5.fx  SSAO visibility 0.6.fx  SSAO visibility 0.7.fx  SSAO visibility 0.8.fx  SSAO visibility 0.9.fx  SSAO visibility 1.0.fx  SSAO.fx  SSAO_none.fx  lightdepth.fx  shadow.fx  shadow.fxsub  shadow_noalpha.fx  shadowcommon.fxsub  shadowmap.fxsub
Skybox/: .gitignore  Image Based Lighting - Disable.fx  skybox.fx  skybox.fxsub  skybox.pmx  skybox_hdr.fx  skybox_hdr.pmx  skydome.fx  skydome2.fx  skydome_hdr.fx  skylighting.fx  skylighting.fxsub  skylighting_hdr.fx  skylighting_none.fx
Tools/: .gitignore  RGBMencode.rar  cmft.rar  cmft_rgbm_x24.rar  cmft_rgbt_x1024.7z  cmft_rgbt_x1024.rar
Tools/IES2HDR/Source code/: CMakeLists.txt  ies_loader.cpp  ies_loader.h  main.cpp  rgbe.cpp  rgbe.h
(+1727 files in other folders)
